# casa

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  Dockerfile  LICENSE  README.md  shell.nix  stack-ghc-8.10.7.yaml  stack-ghc-9.10.2.yaml  stack-ghc-9.10.3.yaml  stack-ghc-9.12.2.yaml  stack-ghc-9.14.1.yaml  stack-ghc-9.8.4.yaml  stack.yaml
.github/workflows/: lint.yml  tests.yml
app/: Main.hs
casa-client/: CHANGELOG.md  LICENSE  casa-client.cabal  package.yaml
casa-client/src/Casa/: Client.hs
casa-server/: CHANGELOG.md  README.md  casa-server.cabal  stack.yaml
casa-server/app/: Main.hs
casa-server/src/Casa/: .#Client.hs  Server.hs
casa-server/src/Casa/Backend/: Postgresql.hs
casa-server/src/Database/Esqueleto/: Compat.hs
casa-server/src/postgresql/Casa/: Backend.hs
casa-server/src/sqlite/Casa/: Backend.hs
casa-server/test/: Existential.hs  Netem.hs
casa-types/: ChangeLog.md  casa-types.cabal  package.yaml
casa-types/src/Casa/: Types.hs
etc/docker/: .gitignore  Dockerfile
etc/helm/: Chart.yaml  values.yaml
etc/helm/templates/: deployment.yaml  ingress.yaml  service.yaml
etc/helm/values/: production.yaml  staging.yaml
etc/scripts/: stage_docker.sh
src/: Casa.hs
