cabal-version:  1.12
name:           casa-client
synopsis:       Client for Casa
description:    Client for Casa <https://casa.stackage.org/>
version:        0.0.3
copyright:      2018-2019 FP Complete, 2024 Haskell Foundation
author:         Chris Done
maintainer:     chrisdone@fpcomplete.com
license:        BSD3
license-file:   LICENSE
category: Development
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
    Casa.Client
  other-modules: Paths_casa_client
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >= 4.5 && < 5
    , bytestring
    , base16-bytestring
    , conduit-extra
    , conduit
    , text
    , http-conduit
    , exceptions
    , casa-types
    , resourcet
    , http-types
    , unordered-containers
    , attoparsec
    , unliftio-core
    , crypton
    , memory
    , network-uri
    , aeson
    , th-lift
    , template-haskell
