cabal-version:  1.12
name:           casa-server
version:        0.0.0
build-type:     Simple

flag postgresql
  description: Use postgres for storage
  manual: True
  default: True

flag sqlite
  description: Use sqlite for storage
  manual: True
  default: False

library
  exposed-modules:
    Casa.Server
    Casa.Backend
  other-modules: Paths_casa_server
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(postgresql)
    hs-source-dirs: src src/postgresql
    build-depends: persistent-postgresql
  if flag(sqlite)
    hs-source-dirs: src src/sqlite
    build-depends: persistent-sqlite
  build-depends:
      base
    , yesod
    , yesod-core
    , bytestring
    , text
    , hashable
    , unordered-containers
    , attoparsec
    , conduit-extra
    , conduit
    , containers
    , base16-bytestring
    , casa-types
    , attoparsec-binary
    , persistent
    , resource-pool
    , monad-logger
    , esqueleto
    , cryptonite
    , memory
    , time
    , blaze-html
    , wai

executable casa-server
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
  if flag(postgresql)
    build-depends: persistent-postgresql
  if flag(sqlite)
    build-depends: persistent-sqlite
  build-depends: base, yesod, casa-server
    , bytestring
    , resource-pool
    , transformers
    , async
    , wai-extra
    , warp
    , wai

test-suite casa-existential-test
  type: exitcode-stdio-1.0
  main-is: Existential.hs
  hs-source-dirs: test
  ghc-options: -Wall -O0
  default-language: Haskell2010
  if flag(postgresql)
    build-depends: persistent-postgresql
  if flag(sqlite)
    build-depends: persistent-sqlite
  build-depends:
      base
    , casa-server
    , hspec
    , conduit
    , text
    , conduit-extra
    , casa-types
    , bytestring
    , async
    , network
    , wai
    , warp
    , yesod
    , network-bsd
    , unordered-containers
    , casa-client
    , resource-pool
    , transformers
    , unliftio-core

    -- For stack
    , stack
    , rio
    , rio-prettyprint
    , Cabal
    , pantry
    , containers
    , uuid
    , time

  build-depends: network     >= 2.7 && < 3.1
                 , network-bsd >= 2.7 && < 2.9
