cabal-version:  1.12
name:           casa-server
version:        0.0.1
homepage:       https://github.com/commercialhaskell/casa
bug-reports:    https://github.com/commercialhaskell/casa/issues
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/commercialhaskell/casa
  subdir: casa-server

flag postgresql
  description: Use postgres for storage
  manual: True
  default: True

flag sqlite
  description: Use sqlite for storage
  manual: True
  default: False

library
  exposed-modules:
    Casa.Server
    Casa.Backend
  other-modules:
    Database.Esqueleto.Compat
    Paths_casa_server
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(postgresql)
    hs-source-dirs: src src/postgresql
    build-depends: persistent-postgresql
  if flag(sqlite)
    hs-source-dirs: src src/sqlite
    build-depends: persistent-sqlite
  build-depends:
      base
    , yesod
    , yesod-core
    , bytestring
    , text
    , hashable
    , unordered-containers
    , attoparsec
    , conduit-extra
    , conduit
    , containers
    , base16-bytestring
    , casa-types
    , attoparsec-binary
    , persistent
    , resource-pool
    , monad-logger
    , esqueleto
    , crypton
    , memory
    , time
    , wai >= 3.2
    , transformers
    , lucid
    , mtl
    , yesod-lucid

executable casa-server
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
  if flag(postgresql)
    build-depends: persistent-postgresql
  if flag(sqlite)
    build-depends: persistent-sqlite
  build-depends:
      base >= 4.12
    , casa-server
    , bytestring
    , resource-pool
    , transformers
    , async
    , wai-extra
    , warp >= 3.3.26
    , wai >= 3.2
    , yesod

test-suite casa-existential-test
  type: exitcode-stdio-1.0
  main-is: Existential.hs
  hs-source-dirs: test
  ghc-options: -Wall -O0
  default-language: Haskell2010
  if flag(postgresql)
    build-depends: persistent-postgresql
  if flag(sqlite)
    build-depends: persistent-sqlite
  build-depends:
      base >= 4.12
    , casa-server
    , hspec
    , conduit
    , text
    , conduit-extra
    , casa-types
    , bytestring
    , async
    , network >= 2.7 && < 3.3
    , wai >= 3.2
    , warp >= 3.3.26
    , yesod
    , network-bsd >= 2.7 && < 2.9
    , unordered-containers
    , casa-client
    , resource-pool
    , transformers
    , unliftio-core

    -- For Stack

    -- We pin to a specific version of Stack (the most recent version released)
    -- because the library of the stack package exists only to support the
    -- Stack executable and there are no guarantees over the stability of its
    -- API.
    , stack == 3.7.1
    , rio
    , rio-prettyprint
    , Cabal
    , pantry >= 0.11.2
    , containers
    , uuid
    , time
