cabal-version:  1.12
name:           casa-server
version:        0.0.1
homepage:       https://github.com/commercialhaskell/casa
bug-reports:    https://github.com/commercialhaskell/casa/issues
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/commercialhaskell/casa
  subdir: casa-server

flag postgresql
  description: Use postgres for storage
  manual: True
  default: True

flag sqlite
  description: Use sqlite for storage
  manual: True
  default: False

library
  exposed-modules:
    Casa.Server
    Casa.Backend
  other-modules:
    Database.Esqueleto.Compat
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(postgresql)
    hs-source-dirs: src src/postgresql
    build-depends: persistent-postgresql
  if flag(sqlite)
    hs-source-dirs: src src/sqlite
    build-depends: persistent-sqlite
  build-depends:
      base
    , attoparsec
    , attoparsec-binary
    , base16-bytestring
    , bytestring
    , casa-types
    , conduit
    , conduit-extra
    , containers
    , crypton
    , esqueleto
    , hashable
    , lucid
    , memory
    , monad-logger
    , mtl
    , persistent
    , resource-pool
    , text
    , time
    , transformers
    , unordered-containers
    , wai >= 3.2
    , yesod
    , yesod-core
    , yesod-lucid

executable casa-server
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
  if flag(postgresql)
    build-depends: persistent-postgresql
  if flag(sqlite)
    build-depends: persistent-sqlite
  build-depends:
      base >= 4.12
    , async
    , bytestring
    , casa-server
    , resource-pool
    , transformers
    , wai >= 3.2
    , wai-extra
    , warp >= 3.3.26
    , yesod

test-suite casa-existential-test
  type: exitcode-stdio-1.0
  main-is: Existential.hs
  hs-source-dirs: test
  ghc-options: -Wall -O0
  default-language: Haskell2010
  if flag(postgresql)
    build-depends: persistent-postgresql
  if flag(sqlite)
    build-depends: persistent-sqlite
  build-depends:
      base >= 4.12
    , async
    , bytestring
    , casa-client
    , casa-server
    , casa-types
    , conduit
    , conduit-extra
    , hspec
    , network >= 2.7 && < 3.3
    , network-bsd >= 2.7 && < 2.9
    , resource-pool
    , text
    , transformers
    , unliftio-core
    , unordered-containers
    , wai >= 3.2
    , warp >= 3.3.26
    , yesod

    -- For Stack

    , Cabal
    , containers
    , pantry >= 0.11.2
    , rio
    , rio-prettyprint
    -- We pin to a specific version of Stack (the most recent version released)
    -- because the library of the stack package exists only to support the
    -- Stack executable and there are no guarantees over the stability of its
    -- API.
    , stack == 3.7.1
    , time
    , uuid
