cabal-version:  1.12
synopsis:       Types for Casa
description:    Types for Casa <https://casa.fpcomplete.com/>
name:           casa-types
copyright:      2018-2019 FP Complete
author:         Chris Done
maintainer:     chrisdone@fpcomplete.com
license:        BSD3
license-file:   LICENSE
category: Development
version:        0.0.2
build-type:     Simple
extra-source-files:
  ChangeLog.md

library
  exposed-modules:
    Casa.Types
  other-modules: Paths_casa_types
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base < 10
    , bytestring
    , attoparsec
    , base16-bytestring >= 1
    , text
    , hashable
    , aeson
    , path-pieces
    , persistent
